# dbx

./: Cargo.toml  flake.nix  package.json
.github/workflows/: docs.yml
apps/desktop/src/: App.vue
apps/desktop/src/components/editor/: AiAssistant.vue  QueryEditor.vue
apps/desktop/src/components/grid/: DataGrid.vue
apps/desktop/src/components/layout/: ContentArea.vue  SqlLibraryPanel.vue
apps/desktop/src/components/redis/: RedisPubSubPanel.vue
apps/desktop/src/components/sidebar/: TreeItem.vue
apps/desktop/src/components/ui/: CustomContextMenu.vue
apps/desktop/src/composables/: useDataGridEditor.ts  useNavigationTargets.ts
apps/desktop/src/i18n/locales/: en.ts  it.ts  ja.ts  pt-BR.ts  zh-CN.ts  zh-TW.ts
apps/desktop/src/lib/: aiPromptKeyboard.ts  redisCommandTable.ts
apps/desktop/src/types/: database.ts
crates/dbx-core/: Cargo.toml
crates/dbx-core/assets/: database-drivers.manifest.json
crates/dbx-core/src/: agent_catalog.rs  agent_manager.rs  ai.rs  schema.rs
crates/dbx-core/src/db/: clickhouse_driver.rs  sqlserver.rs
crates/dbx-gpui/: Cargo.toml
crates/dbx-gpui/src/: actions.rs  app.rs  main.rs  state.rs
crates/dbx-gpui/src/ai/: mod.rs
crates/dbx-gpui/src/chart/: mod.rs
crates/dbx-gpui/src/connection/: connection_dialog.rs  mod.rs
crates/dbx-gpui/src/diagram/: mod.rs
crates/dbx-gpui/src/dialogs/: mod.rs
crates/dbx-gpui/src/diff/: mod.rs
crates/dbx-gpui/src/editor/: mod.rs
crates/dbx-gpui/src/export/: mod.rs
crates/dbx-gpui/src/grid/: mod.rs
crates/dbx-gpui/src/history/: mod.rs
crates/dbx-gpui/src/i18n/: en.rs  mod.rs  zh_cn.rs
crates/dbx-gpui/src/import/: mod.rs
crates/dbx-gpui/src/mongo/: mod.rs
crates/dbx-gpui/src/plugins/: mod.rs
crates/dbx-gpui/src/redis/: mod.rs
crates/dbx-gpui/src/schema/: mod.rs
crates/dbx-gpui/src/settings/: mod.rs
crates/dbx-gpui/src/shell/: main_window.rs  mod.rs  sidebar.rs  status_bar.rs  tab_bar.rs  toolbar.rs
crates/dbx-gpui/src/theme/: tokens.rs
crates/dbx-gpui/src/transfer/: mod.rs
crates/dbx-gpui/src/util/: mod.rs
crates/dbx-gpui/src/widgets/: mod.rs
crates/dbx-web/: Cargo.toml
crates/dbx-web/src/: main.rs
plugins/jdbc/src/main/java/app/dbx/jdbc/: DbxJdbcPlugin.java
plugins/jdbc/src/test/java/app/dbx/jdbc/: DbxJdbcPluginTest.java
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: agents.rs  connection.rs  mcp_bridge.rs
src/components/config/: DriverStoreDialog.vue
src/components/sidebar/: ConnectionTree.vue  TreeItem.vue
src/lib/: treeNodeClick.ts
src/stores/: connectionStore.ts
tests/: treeNodeClick.test.ts
