[package]
name = "dbx-gpui"
version = "0.1.0"
description = "DBX native desktop client built with GPUI"
authors = ["skyler"]
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "dbx-gpui"
path = "src/main.rs"

[dependencies]
gpui = { package = "gpui-unofficial", version = "1.2" }
gpui-platform = { package = "gpui-platform-gpui-unofficial", version = "1.2" }
dbx-core = { path = "../dbx-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
log = "0.4"
